[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/DialogBox.gd" type="Script" id=1]
[ext_resource path="res://Resources/DialogItems/GaramondPremrPro-Smbd.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Resources/DialogItems/light frame 01.png" type="Texture" id=3]
[ext_resource path="res://Resources/DialogItems/light cursor 04.png" type="Texture" id=4]
[ext_resource path="res://Resources/DialogItems/light frame 09.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "Animation"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 31.8, 55.8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:margin_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -34.44, -10.44 ]
}

[node name="DialogBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fundo" type="TextureRect" parent="."]
anchor_left = 0.094
anchor_top = 0.613
anchor_right = 0.906
anchor_bottom = 0.96
margin_left = -0.256004
margin_top = 0.199982
margin_right = 0.255981
texture = ExtResource( 5 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Frente" type="TextureRect" parent="."]
anchor_left = 0.125
anchor_top = 0.64
anchor_right = 0.875
anchor_bottom = 0.933
margin_top = -3.05176e-05
margin_right = -6.10352e-05
margin_bottom = 0.200012
texture = ExtResource( 3 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Frente"]
anchor_left = 0.062
anchor_top = 0.091
anchor_right = 0.875
anchor_bottom = 0.909
margin_left = 0.383999
margin_top = -0.0159988
margin_right = -6.10352e-05
margin_bottom = 0.0160065
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.054902, 0.027451, 0.027451, 1 )
bbcode_enabled = true
bbcode_text = "Place Holder"
text = "Place Holder"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextIndicator" type="TextureRect" parent="Frente"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -22.9999
margin_top = 56.0
margin_right = -7.99994
margin_bottom = -14.2401
texture = ExtResource( 4 )
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Frente/NextIndicator"]
autoplay = "Animation"
anims/Animation = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="tween_started" from="Tween" to="." method="_on_Tween_tween_started"]
